# lovclip

./: CHANGELOG.md  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.changeset/: tauri-migration.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
docs/: RELEASE-NOTES.md
electron/main/: index.ts
public/: manifest.json
scripts/: release.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/clipboard/: mod.rs  types.rs  watcher.rs
src-tauri/src/macos/: accessibility.rs  mod.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/window/: mod.rs
src/api/: tauri-bridge.ts
src/components/: ArchiveLibrary.tsx  ClipboardManager.css  ClipboardManager.tsx  ContentTypeNavigator.tsx  PermissionDialog.tsx  SettingsWindow.css  SettingsWindow.tsx
src/components/layouts/: AudioListLayout.tsx  ImageWaterfallLayout.tsx  TextListLayout.tsx  VideoGridLayout.tsx
src/store/: atoms.ts
src/types/: archive-types.ts  tauri.d.ts
